ajout de la structure HTML, classes et fichiers scss

--- a/index.html
+++ b/index.html
@@ -8,6 +8,93 @@
     <title>Ohmyfood</title>
 </head>
 <body>
-    
+    <header class="header-home">
+        <img class="header-home__img" src="" alt="Logo">
+    </header>
+    <main>
+        <div class="loc-home">
+            <i class="loc-home__icon"></i>
+            <p class="loc-home__text">Paris, Belleville</p>
+        </div>
+        <div class="desc-home">
+            <h1 class="desc-home__title">Réservez le menu qui vous convient</h1>
+            <p class="desc-home__text">Découvrez des restaurants d'exception, séléctionnés par no soins.</p>
+            <button class="desc-home__button">Explorer nos restaurants</button>
+        </div>
+        <div class="steps-home">
+            <h2 class="steps-home__title">Fonctionnement</h2>
+            <div class="buttons-steps">
+                <div class="buttons-steps__step">1</div>
+                <i class="buttons-steps__icon"></i>
+                <p class="buttons-steps__text">Choisissez un restaurant</p>
+            </div>
+            <div class="buttons-steps">
+                <div class="buttons-steps__step">2</div>
+                <i class="buttons-steps__icon"></i>
+                <p class="buttons-steps__text">Composez votre menu</p>
+            </div>
+            <div class="buttons-steps">
+                <div class="buttons-steps__step">3</div>
+                <i class="buttons-steps__icon"></i>
+                <p class="buttons-steps__text">Dégustez au restaurant</p>
+            </div>
+        </div>
+        <section class="restaurants-home">
+            <h2 class="restaurants-home__title">Restaurants</h2>
+            <div class="card-list">
+                <a class="card" href="">
+                    <div class="card__top">
+                        <img class="card__img" src="" alt="">
+                        <div class="card__tag">Nouveau</div>
+                    </div>
+                    <div class="card__bottom">
+                        <p class="card__title">La palette du goût</p>
+                        <p class="card__where">Ménilmontant</p>
+                        <i class="card__icon"></i>
+                    </div>
+                </a>
+                <a class="card" href="">
+                    <div class="card__top">
+                        <img class="card__img" src="" alt="">
+                        <div class="card__tag">Nouveau</div>
+                    </div>
+                    <div class="card__bottom">
+                        <p class="card__title">La note enchantée</p>
+                        <p class="card__where">Charonne</p>
+                        <i class="card__icon"></i>
+                    </div>
+                </a>
+                <a class="card" href="">
+                    <div class="card__top">
+                        <img class="card__img" src="" alt="">
+                    </div>
+                    <div class="card__bottom">
+                        <p class="card__title">À la française</p>
+                        <p class="card__where">Cité Rouge</p>
+                        <i class="card__icon"></i>
+                    </div>
+                </a>
+                <a class="card" href="">
+                    <div class="card__top">
+                        <img class="card__img" src="" alt="">
+                    </div>
+                    <div class="card__bottom">
+                        <p class="card__title">Le délice des sens</p>
+                        <p class="card__where">Folie-Méricourt</p>
+                        <i class="card__icon"></i>
+                    </div>
+                </a>
+            </div>
+        </section>
+    </main>
+    <footer class="page-footer">
+        <img class="page-footer__img" src="" alt="Logo">
+        <ul class="footer-list">
+            <li class="footer-list__item"><i class="footer-list__icon"></i>Proposer un restaurant</li>
+            <li class="footer-list__item"><i class="footer-list__icon"></i>Devenir partenaire</li>
+            <li class="footer-list__item">Mentions légales</li>
+            <li class="footer-list__item">Contact</li>
+        </ul>
+    </footer>
 </body>
 </html>
