--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/main.css">
     <title>Ohmyfood</title>
@@ -23,7 +24,7 @@
         <div class="desc-home">
             <h1 class="desc-home__title">Réservez le menu qui vous convient</h1>
             <p class="desc-home__text">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <button class="desc-home__button">Explorer nos restaurants</button>
+            <button class="button-component">Explorer nos restaurants</button>
         </div>
         <div class="steps-home">
             <h2 class="steps-home__title">Fonctionnement</h2>
@@ -53,7 +54,7 @@
                     </div>
                     <div class="card__bottom">
                         <p class="card__title">La palette du goût</p>
-                        <p class="card__where">Ménilmontant</p>
+                        <p class="card__subtitle">Ménilmontant</p>
                         <i class="card__icon fa-regular fa-heart fa-xl"></i>
                     </div>
                 </a>
@@ -64,27 +65,27 @@
                     </div>
                     <div class="card__bottom">
                         <p class="card__title">La note enchantée</p>
-                        <p class="card__where">Charonne</p>
+                        <p class="card__subtitle">Charonne</p>
                         <i class="card__icon fa-regular fa-heart fa-xl"></i>
                     </div>
                 </a>
-                <a class="card" href="">
+                <a class="card" href="./alafrancaise.html">
                     <div class="card__top">
-                        <img class="card__img" src="./assets/restaurants/second-restaurant.jpg" alt="À la française">
+                        <img class="card__img" src="./assets/restaurants/fourth-restaurant.jpg" alt="À la française">
                     </div>
                     <div class="card__bottom">
                         <p class="card__title">À la française</p>
-                        <p class="card__where">Cité Rouge</p>
+                        <p class="card__subtitle">Cité Rouge</p>
                         <i class="card__icon fa-regular fa-heart fa-xl"></i>
                     </div>
                 </a>
                 <a class="card" href="">
                     <div class="card__top">
-                        <img class="card__img" src="./assets/restaurants/fourth-restaurant.jpg" alt="Le délice des sens">
+                        <img class="card__img" src="./assets/restaurants/second-restaurant.jpg" alt="Le délice des sens">
                     </div>
                     <div class="card__bottom">
                         <p class="card__title">Le délice des sens</p>
-                        <p class="card__where">Folie-Méricourt</p>
+                        <p class="card__subtitle">Folie-Méricourt</p>
                         <i class="card__icon fa-regular fa-heart fa-xl"></i>
                     </div>
                 </a>
@@ -92,10 +93,10 @@
         </section>
     </main>
     <footer class="page-footer">
-        <img class="page-footer__img" src="" alt="Logo">
+        <h3 class="page-footer__img">ohmyfood</h3>
         <ul class="footer-list">
-            <li class="footer-list__item"><i class="footer-list__icon"></i>Proposer un restaurant</li>
-            <li class="footer-list__item"><i class="footer-list__icon"></i>Devenir partenaire</li>
+            <li class="footer-list__item"><i class="footer-list__icon1 fa-solid fa-utensils fa-xs"></i>Proposer un restaurant</li>
+            <li class="footer-list__item"><i class="footer-list__icon2 fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
             <li class="footer-list__item">Mentions légales</li>
             <li class="footer-list__item">Contact</li>
         </ul>
