ajout du responsive, des pages des autres menus, presque fini

--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/main.css">
-    <title>Ohmyfood - À la française</title>
+    <title>Ohmyfood - Le délice des sens</title>
 </head>
 <body>
     <header class="header">
@@ -20,11 +20,11 @@
         </a>
         <img class="header__img" src="./assets/logo/ohmyfood.png" alt="Logo">
     </header>
-    <main class="menu-page alafrancaise">
-        <img class="img-menu" src="./assets/restaurants/fourth-restaurant.jpg" alt="À la française">
+    <main class="menu-page ledelicedessens">
+        <img class="img-menu" src="./assets/restaurants/second-restaurant.jpg" alt="À la française">
         <section class="menu">
             <header class="menu__header">
-                <h1 class="menu__title">À la française</h1>
+                <h1 class="menu__title">Le délice des sens</h1>
                 <i class="menu__icon fa-regular fa-heart fa-xl"></i>
             </header>
             <h2 class="menu__steptitle">Entrées</h2>
