--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <title>Ohmyfood</title>
 </head>
 <body>
-    <header class="header-home">
-        <img class="header-home__img" src="./assets/logo/ohmyfood.png" alt="Logo">
+    <header class="header">
+        <img class="header__img" src="./assets/logo/ohmyfood.png" alt="Logo">
     </header>
     <main>
         <div class="loc-home">
-            <i class="loc-home__icon fa-solid fa-location-dot"></i>
-            <p class="loc-home__text">Paris, Belleville</p>
+            <div class="loc-home__block">
+                <i class="loc-home__icon fa-solid fa-location-dot"></i>
+                <p class="loc-home__text">Paris, Belleville</p>
+            </div>
         </div>
         <div class="desc-home">
             <h1 class="desc-home__title">Réservez le menu qui vous convient</h1>
@@ -28,26 +30,28 @@
         </div>
         <div class="steps-home">
             <h2 class="steps-home__title">Fonctionnement</h2>
-            <div class="buttons-steps">
-                <div class="buttons-steps__step">1</div>
-                <i class="buttons-steps__icon fa-solid fa-mobile-screen-button"></i>
-                <p class="buttons-steps__text">Choisissez un restaurant</p>
-            </div>
-            <div class="buttons-steps">
-                <div class="buttons-steps__step">2</div>
-                <i class="buttons-steps__icon fa-solid fa-list-ul"></i>
-                <p class="buttons-steps__text">Composez votre menu</p>
-            </div>
-            <div class="buttons-steps">
-                <div class="buttons-steps__step">3</div>
-                <i class="buttons-steps__icon fa-solid fa-store"></i>
-                <p class="buttons-steps__text">Dégustez au restaurant</p>
+            <div class="buttons-home">
+                <div class="buttons-steps">
+                    <div class="buttons-steps__step">1</div>
+                    <i class="buttons-steps__icon fa-solid fa-mobile-screen-button"></i>
+                    <p class="buttons-steps__text">Choisissez un restaurant</p>
+                </div>
+                <div class="buttons-steps">
+                    <div class="buttons-steps__step">2</div>
+                    <i class="buttons-steps__icon fa-solid fa-list-ul"></i>
+                    <p class="buttons-steps__text">Composez votre menu</p>
+                </div>
+                <div class="buttons-steps">
+                    <div class="buttons-steps__step">3</div>
+                    <i class="buttons-steps__icon fa-solid fa-store"></i>
+                    <p class="buttons-steps__text">Dégustez au restaurant</p>
+                </div>
             </div>
         </div>
         <section class="restaurants-home">
             <h2 class="restaurants-home__title">Restaurants</h2>
             <div class="card-list">
-                <a class="card" href="">
+                <a class="card" href="./lapalettedugout.html">
                     <div class="card__top">
                         <img class="card__img" src="./assets/restaurants/first-restaurant.jpg" alt="La palette du goût">
                         <div class="card__tag">Nouveau</div>
@@ -58,7 +62,7 @@
                         <i class="card__icon fa-regular fa-heart fa-xl"></i>
                     </div>
                 </a>
-                <a class="card" href="">
+                <a class="card" href="./lanoteenchantee.html">
                     <div class="card__top">
                         <img class="card__img" src="./assets/restaurants/third-restaurant.jpg" alt="La note enchantée">
                         <div class="card__tag">Nouveau</div>
@@ -79,7 +83,7 @@
                         <i class="card__icon fa-regular fa-heart fa-xl"></i>
                     </div>
                 </a>
-                <a class="card" href="">
+                <a class="card" href="./ledelicedessens.html">
                     <div class="card__top">
                         <img class="card__img" src="./assets/restaurants/second-restaurant.jpg" alt="Le délice des sens">
                     </div>
