work in progress

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -13,7 +13,6 @@
     <title>Ohmyfood - À la française</title>
 </head>
 <body>
-    <div class="loader"></div>
     <header class="header">
         <a href="./index.html">
             <button class="button-component header__button">Retour à l'accueil</button>
@@ -78,7 +77,7 @@
                 </div>
                 <div class="card__menu">
                     <p class="card__title">Millefeuille croustillant</p>
-                    <p class="card__subtitle">Myrtilles et pâte d’amande<span class="card__price">35€</span></p>
+                    <p class="card__subtitle">Myrtilles et pâte d’amande Myrtilles et<span class="card__price">35€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
