--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="loader"></div>
-    <header class="header">
+    <header class="header header__home">
         <img class="header__img" src="./assets/logo/ohmyfood.png" alt="Logo">
     </header>
     <main class="home-page">
@@ -42,9 +42,9 @@
                     <i class="buttons-steps__icon fa-solid fa-list-ul"></i>
                     <p class="buttons-steps__text">Composez votre menu</p>
                 </div>
-                <div class="buttons-steps button-steps__colour">
+                <div class="buttons-steps buttons-steps__colour">
                     <div class="buttons-steps__step">3</div>
-                    <i class="buttons-steps__icon fa-solid fa-store"></i>
+                    <i class="buttons-steps__icon buttons-steps__iconcolored fa-solid fa-store"></i>
                     <p class="buttons-steps__text">Dégustez au restaurant</p>
                 </div>
             </div>
@@ -105,7 +105,7 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer page-footer__home">
         <h3 class="page-footer__img">ohmyfood</h3>
         <ul class="footer-list">
             <li class="footer-list__item"><i class="footer-list__icon1 fa-solid fa-utensils fa-xs"></i>Proposer un restaurant</li>
