--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -31,7 +31,7 @@
                 <h2 class="menu__steptitle">Entrées</h2>
                 <div class="card__menu">
                     <p class="card__title">Tartare de poulpe acidulé</p>
-                    <p class="card__subtitle">Aux zestes d'orange<span class="card__price">35€</span></p>
+                    <p class="card__subtitle">Aux zestes d'orange<span class="card__price">25€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
@@ -41,7 +41,7 @@
                 </div>
                 <div class="card__menu">
                     <p class="card__title">Soupe à l'oignon</p>
-                    <p class="card__subtitle">Revisitée<span class="card__price">35€</span></p>
+                    <p class="card__subtitle">Revisitée<span class="card__price">20€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                 <h2 class="menu__steptitle">Plats</h2>
                 <div class="card__menu">
                     <p class="card__title">Coquilles Saint-Jacques</p>
-                    <p class="card__subtitle">Accompagnées d'une purée de panais<span class="card__price">35€</span></p>
+                    <p class="card__subtitle">Accompagnées d'une purée de panais<span class="card__price">40€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
@@ -59,7 +59,7 @@
                 </div>
                 <div class="card__menu">
                     <p class="card__title">Pigeonneau d’Ille-et-Vilaine</p>
-                    <p class="card__subtitle">Sur son lit de gnocchis aux légumes<span class="card__price">35€</span></p>
+                    <p class="card__subtitle">Sur son lit de gnocchis aux légumes<span class="card__price">44€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
@@ -67,17 +67,17 @@
                 <h2 class="menu__steptitle">Desserts</h2>
                 <div class="card__menu">
                     <p class="card__title">Pétales de violettes glacés</p>
-                    <p class="card__subtitle">Et purée de noisettes<span class="card__price">35€</span></p>
+                    <p class="card__subtitle">Et purée de noisettes<span class="card__price">18€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
                     <p class="card__title">Fondant au chocolat</p>
-                    <p class="card__subtitle">Revisité<span class="card__price">35€</span></p>
+                    <p class="card__subtitle">Revisité<span class="card__price">22€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
                     <p class="card__title">Millefeuille croustillant</p>
-                    <p class="card__subtitle">Myrtilles et pâte d’amande Myrtilles et<span class="card__price">35€</span></p>
+                    <p class="card__subtitle">Myrtilles et pâte d’amande<span class="card__price">23€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
