--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -30,54 +30,59 @@
             <div class="starters">     
                 <h2 class="menu__steptitle">Entrées</h2>
                 <div class="card__menu">
-                    <p class="card__title">Tartare de poulpe acidulé</p>
-                    <p class="card__subtitle">Aux zestes d'orange<span class="card__price">35€</span></p>
+                    <p class="card__title">Ravioles de foie gras</p>
+                    <p class="card__subtitle">Accompagnés de leur crème à la truffe<span class="card__price">25€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Velouté de légumes d'antan</p>
-                    <p class="card__subtitle">Carotte, panais, topinambour<span class="card__price">35€</span></p>
+                    <p class="card__title">Caviar osciètre</p>
+                    <p class="card__subtitle">Sur blini à la farine de blé noir<span class="card__price">35€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Soupe à l'oignon</p>
-                    <p class="card__subtitle">Revisitée<span class="card__price">35€</span></p>
+                    <p class="card__title">Homard et espuma de potiron</p>
+                    <p class="card__subtitle">Mariné aux zestes d'orange<span class="card__price">20€</span></p>
+                    <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
+                </div>
+                <div class="card__menu">
+                    <p class="card__title">Foie gras de canard cuit entier</p>
+                    <p class="card__subtitle">Confiture de figue et pain toasté<span class="card__price">35€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
             <div class="dishes">
                 <h2 class="menu__steptitle">Plats</h2>
                 <div class="card__menu">
-                    <p class="card__title">Coquilles Saint-Jacques</p>
-                    <p class="card__subtitle">Accompagnées d'une purée de panais<span class="card__price">35€</span></p>
+                    <p class="card__title">Noix de coquilles Saint-Jacques</p>
+                    <p class="card__subtitle">Sur lit de purée de céleri-rave<span class="card__price">40€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Magret de canard</p>
-                    <p class="card__subtitle">Et parmentier de pommes de terre<span class="card__price">35€</span></p>
+                    <p class="card__title">Langoustine poêlée</p>
+                    <p class="card__subtitle">Purée de patate douce<span class="card__price">35€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Pigeonneau d’Ille-et-Vilaine</p>
-                    <p class="card__subtitle">Sur son lit de gnocchis aux légumes<span class="card__price">35€</span></p>
+                    <p class="card__title">Mijoté de queue de boeuf </p>
+                    <p class="card__subtitle">Et riz sauvage aux zestes de citron<span class="card__price">44€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
             <div class="desserts">
                 <h2 class="menu__steptitle">Desserts</h2>
                 <div class="card__menu">
-                    <p class="card__title">Pétales de violettes glacés</p>
-                    <p class="card__subtitle">Et purée de noisettes<span class="card__price">35€</span></p>
+                    <p class="card__title">Macaron noisette et chocolat</p>
+                    <p class="card__subtitle">Glace au caramel brun et sel de Guérande<span class="card__price">18€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Fondant au chocolat</p>
-                    <p class="card__subtitle">Revisité<span class="card__price">35€</span></p>
+                    <p class="card__title">Baba au rhum revisité </p>
+                    <p class="card__subtitle">Avec son coulis de citron<span class="card__price">22€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Millefeuille croustillant</p>
-                    <p class="card__subtitle">Myrtilles et pâte d’amande<span class="card__price">35€</span></p>
+                    <p class="card__title">Tarte au citron meringuée</p>
+                    <p class="card__subtitle">Déstructurée<span class="card__price">23€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
