--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -30,54 +30,54 @@
             <div class="starters">
                 <h2 class="menu__steptitle">Entrées</h2>
                 <div class="card__menu">
-                    <p class="card__title">Tartare de poulpe acidulé</p>
-                    <p class="card__subtitle">Aux zestes d'orange<span class="card__price">35€</span></p>
+                    <p class="card__title">Tartare de thon</p>
+                    <p class="card__subtitle">Assaisonné au yuzu<span class="card__price">25€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Velouté de légumes d'antan</p>
-                    <p class="card__subtitle">Carotte, panais, topinambour<span class="card__price">35€</span></p>
+                    <p class="card__title">Bouchée de homard croustillant </p>
+                    <p class="card__subtitle">Et sa farandole de petits légumes<span class="card__price">35€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Soupe à l'oignon</p>
-                    <p class="card__subtitle">Revisitée<span class="card__price">35€</span></p>
+                    <p class="card__title">Velouté de cèpes</p>
+                    <p class="card__subtitle">Aux truffes<span class="card__price">20€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
             <div class="dishes">
                 <h2 class="menu__steptitle">Plats</h2>
                 <div class="card__menu">
-                    <p class="card__title">Coquilles Saint-Jacques</p>
-                    <p class="card__subtitle">Accompagnées d'une purée de panais<span class="card__price">35€</span></p>
+                    <p class="card__title">Poulet rôti aux herbes de Provence</p>
+                    <p class="card__subtitle">Et sa crème de truffe<span class="card__price">40€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Magret de canard</p>
-                    <p class="card__subtitle">Et parmentier de pommes de terre<span class="card__price">35€</span></p>
+                    <p class="card__title">Langouste rôtie</p>
+                    <p class="card__subtitle">Et ses légumes de saison<span class="card__price">35€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Pigeonneau d’Ille-et-Vilaine</p>
-                    <p class="card__subtitle">Sur son lit de gnocchis aux légumes<span class="card__price">35€</span></p>
+                    <p class="card__title">Côte de boeuf Angus</p>
+                    <p class="card__subtitle">Et sa purée de panais<span class="card__price">44€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
             <div class="desserts">
                 <h2 class="menu__steptitle">Desserts</h2>
                 <div class="card__menu">
-                    <p class="card__title">Pétales de violettes glacés</p>
-                    <p class="card__subtitle">Et purée de noisettes<span class="card__price">35€</span></p>
+                    <p class="card__title">Farandole de desserts</p>
+                    <p class="card__subtitle">Du chef<span class="card__price">18€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Fondant au chocolat</p>
-                    <p class="card__subtitle">Revisité<span class="card__price">35€</span></p>
+                    <p class="card__title">Crème brulée</p>
+                    <p class="card__subtitle">Revisitée<span class="card__price">22€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
                 <div class="card__menu">
-                    <p class="card__title">Millefeuille croustillant</p>
-                    <p class="card__subtitle">Myrtilles et pâte d’amande<span class="card__price">35€</span></p>
+                    <p class="card__title">Tiramisu</p>
+                    <p class="card__subtitle">À la noisette<span class="card__price">23€</span></p>
                     <div class="card__check"><i class="fa-solid fa-check card__check--icon"></i></div>
                 </div>
             </div>
