--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <a href="./index.html">
-            <button class="button-component header__button">Retour à l'accueil</button>
+            <span class="button-component header__button">Retour à l'accueil</span>
             <i class="fa-solid fa-arrow-left fa-xl header__return"></i>
         </a>
         <img class="header__img" src="./assets/logo/ohmyfood.png" alt="Logo">
@@ -92,7 +92,7 @@
             <li class="footer-list__item"><i class="footer-list__icon1 fa-solid fa-utensils fa-xs"></i>Proposer un restaurant</li>
             <li class="footer-list__item"><i class="footer-list__icon2 fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
             <li class="footer-list__item">Mentions légales</li>
-            <a href="mailto:test@test.com"><li class="footer-list__item">Contact</li></a>
+            <li class="footer-list__item"><a href="mailto:test@test.com">Contact</a></li>
         </ul>
     </footer>
 </body>
