--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <li class="footer-list__item"><i class="footer-list__icon1 fa-solid fa-utensils fa-xs"></i>Proposer un restaurant</li>
             <li class="footer-list__item"><i class="footer-list__icon2 fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
             <li class="footer-list__item">Mentions légales</li>
-            <a href="mailto:test@test.com"><li class="footer-list__item">Contact</li></a>
+            <li class="footer-list__item"><a href="mailto:test@test.com">Contact</a></li>
         </ul>
     </footer>
 </body>
