--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <a href="./index.html">
-            <button class="button-component header__button">Retour à l'accueil</button>
+            <span class="button-component header__button">Retour à l'accueil</span>
             <i class="fa-solid fa-arrow-left fa-xl header__return"></i>
         </a>
         <img class="header__img" src="./assets/logo/ohmyfood.png" alt="Logo">
