--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <div class="buttons-home">
                 <div class="buttons-steps">
                     <div class="buttons-steps__step">1</div>
-                    <i class="buttons-steps__icon fa-solid fa-mobile-screen-button"></i>
+                    <i class="buttons-steps__icon fa-solid fa-mobile-screen-button buttons-steps__iconcolored"></i>
                     <p class="buttons-steps__text">Choisissez un restaurant</p>
                 </div>
                 <div class="buttons-steps">
                     <div class="buttons-steps__step">2</div>
-                    <i class="buttons-steps__icon fa-solid fa-list-ul"></i>
+                    <i class="buttons-steps__icon fa-solid fa-list-ul buttons-steps__iconcolored"></i>
                     <p class="buttons-steps__text">Composez votre menu</p>
                 </div>
-                <div class="buttons-steps buttons-steps__colour">
+                <div class="buttons-steps buttons-steps">
                     <div class="buttons-steps__step">3</div>
                     <i class="buttons-steps__icon buttons-steps__iconcolored fa-solid fa-store"></i>
                     <p class="buttons-steps__text">Dégustez au restaurant</p>
